SLVSCODE-361 test hashCode and equals for FindFileByNamesInFolder